Moved Quicky questions to \tutorhint environment, i.e. removed from students version of script.

--- a/Versuch_1-2n/Anleitung-1.tex
+++ b/Versuch_1-2n/Anleitung-1.tex
@@ -38,33 +38,33 @@ Auf dieselbe Weise führt Dotierung mit einem fünfwertigen Element (\textit{Don
 
 \subsection{$pn$-Diode}
 
-Beim idealen $pn$-\"Ubergang grenzen zwei gleichm\"assig dotierte $p$-
+Beim idealen $pn$-Übergang grenzen zwei gleichmäßig dotierte $p$-
 und $n$-dotierte Schichten aneinander. Durch die unterschiedliche
-Konzentration freier Ladungstr\"ager auf beiden Seiten kommt es zur
+Konzentration freier Ladungsträger auf beiden Seiten kommt es zur
 Diffusion: Elektronen des $n$-dotierten Gebiets wandern zur
-$p$-dortierten Seite und k\"onnen dort mit L\"ochern rekombinieren. Die 
+$p$-dotierten Seite und können dort mit Löchern rekombinieren. Die 
 ortsfesten Atome, die ja nun ionisiert sind, stellen eine
-positive {\it Raumladung} dar. Analog wandern L\"ocher aus der
+positive {\it Raumladung} dar. Analog wandern Löcher aus der
 $p$- in die $n$-Zone und rekombinieren. Eine negative Raumladung
 entsteht.\\
 Diese Raumladungen erzeugen ein elektrisches Feld,
 welches der Diffusion entgegenwirkt und zu einem Gleichgewicht
-f\"uhrt. Die Spannung, welche durch das elektrische Feld erzeugt
+führt. Die Spannung, welche durch das elektrische Feld erzeugt
 wird, nennt man {\it Diffusionsspannung}, $U_{\mathrm{D}}$. Das Gebiet
-um den $pn$-\"Ubergang, welches frei von beweglichen Ladungstr{\"a}gern
+um den $pn$-Übergang, welches frei von beweglichen Ladungsträgern
  ist, wird {\it Verarmungszone} genannt. 
 Die Ausdehnung der Verarmungszone auf die
 jeweilige Seite ist proportional zum inversen der
-Ladungstr\"agerkonzentration.
+Ladungsträgerkonzentration.
 
-\subsubsection{$pn$-\"Ubergang mit \"ausserer Spannung in Durchlaßrichtung}
+\subsubsection{$pn$-Übergang mit äußerer Spannung in Durchlaßrichtung}
 
-Legt man an den $pn$-\"Ubergang eine externe Spannung an, so dass die
+Legt man an den $pn$-Übergang eine externe Spannung an, so dass die
 Anode an die $p$-Schicht und die Kathode an die $n$-Schicht
 angeschlossen ist, werden die Elektronen aus dem $n$-Gebiet zum
 $p$-Gebiet hin verschoben und andersherum. Die angelegte Spannung,
-$U_{\mathrm{F}}$, wirkt der Diffusionsspannung entgegen. Es gilt f\"ur
-die Potentialdifferenz am $pn$-\"Ubergang:
+$U_{\mathrm{F}}$, wirkt der Diffusionsspannung entgegen. Es gilt für
+die Potentialdifferenz am $pn$-Übergang:
 %
 \begin{equation}
 U_{pn} = U_{\mathrm{Diff}} - U_{\mathrm{F}} \, .
@@ -72,20 +72,20 @@ U_{pn} = U_{\mathrm{Diff}} - U_{\mathrm{F}} \, .
 
 \noindent
 Wenn die angelegt Spannung größer wird als die Diffusionsspannung, dann kann durch die Diode Strom fließen. Die Spannung, bei der das passiert nennt man \textit{Diodenspannung} $U_{\mathrm{D}}$ oder auch \textit{Vorwärtsspannung}. Sie ist (natürlich) entgegengesetzt gleich der Diffusionsspannung.
-Mit zunehmender externer Spannung w\"achst der Strom durch den $pn$-\"Ubergang. Man spricht von einem {\it Durchlassstrom}.
+Mit zunehmender externer Spannung wächst der Strom durch den $pn$-Übergang. Man spricht von einem {\it Durchlassstrom}.
 
-\subsubsection{$pn$-\"Ubergang mit \"ausserer Spannung in Sperrrichtung}
+\subsubsection{$pn$-Übergang mit äußerer Spannung in Sperrrichtung}
 
 Legt man eine externe Spannung mit umgekehrter Polung,
-$U_{\mathrm{R}}$, an den $pn$-\"Ubergang, so verst\"arkt diese die
-Diffusionsspannung und man erh\"alt
+$U_{\mathrm{R}}$, an den $pn$-Übergang, so verstärkt diese die
+Diffusionsspannung und man erhält
 %
 \begin{equation}
 U_{pn} = U_{\mathrm{Diff}} + U_{\mathrm{R}} \, .
 \end{equation}
 
-Die Elektronen der $n$-Schicht und die L\"ocher der $p$-Schicht werden
-von der Verarmungszone weggezogen. Die Verarmungszone w\"achst. Da
+Die Elektronen der $n$-Schicht und die Löcher der $p$-Schicht werden
+von der Verarmungszone weggezogen. Die Verarmungszone wächst. Da
 kein Strom fließen kann wird diese Art der Beschaltung auch {\it
 Sperrrichtung} genannt.
 
@@ -93,25 +93,25 @@ Sperrrichtung} genannt.
 \begin{center}
 \includegraphics[width=0.45\textwidth]{Abbildungen/pn_Uebergang.jpg}
 \end{center}
-\caption{$pn$-\"Ubergang ohne angelegte Spannung (oben), mit \"ausserer Spannung in Durchlaß- (Mitte) und Sperrrichtung (unten).}
+\caption{$pn$-übergang ohne angelegte Spannung (oben), mit äußerer Spannung in Durchlaß- (Mitte) und Sperrrichtung (unten).}
 \label{fig:Verarmung}
 \end{figure}
 
 \subsubsection{Durchbruch}
 
-Im Sperrbetrieb k\"onnen hohe elektrische Felder in der Sperrschicht
+Im Sperrbetrieb können hohe elektrische Felder in der Sperrschicht
 auftreten. Durch den {\it Lawineneneffekt} kommt
 es zu einem starken Anstieg des {\it Sperrstroms}. Diesen Effekt bezeichnet 
-man als {\it Durchbruch} des $pn$-\"Ubergangs.\\
+man als {\it Durchbruch} des $pn$-Übergangs.\\
 
 \noindent
 \textbf{Lawineneffekt.} 
 %
 Elektronen, welche durch thermische Anregung in der Sperrschicht entstehen,
 werden durch das elektrische Feld beschleunigt. Bei ausreichender
-Energie k\"onnen Elektronen aus Atomverb\"anden herausgeschlagen
-werden. Diese sekund\"aren Elektronen k\"onnen ihrerseits durch
-St\"osse Atome ionisieren und sorgen damit f\"ur einen ansteigenden
+Energie können Elektronen aus Atomverbänden herausgeschlagen
+werden. Diese sekundären Elektronen können ihrerseits durch
+Stösse Atome ionisieren und sorgen damit für einen ansteigenden
 Strom.
 
 \subsection{Ladungsdeposition in der verarmten Diode}
@@ -138,6 +138,7 @@ Im Versuch wird ein in aus 19 Einzelelementen geschaltetes Solarmodul verwendet.
 	\label{fig:Leistung}
 \end{figure}
 
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -195,15 +196,21 @@ Im Versuch wird ein in aus 19 Einzelelementen geschaltetes Solarmodul verwendet.
 	%
 \end{enumerate}
 
+\end{tutorhint}
 %------------------------------------------------
 \section{Durchführung} 
 %------------------------------------------------
 
+%\begin{figure}[h]
+	%\centering
+		%\includegraphics[width=0.5\textwidth]{Abbildungen/Schaltung_Kennlinie.jpg}
+	%\label{fig:Schaltung_Kennlinie}
+	%\caption{Schaltung zur Messung der Kennlinie der Halbleiterdiode.}
+%\end{figure}
 \begin{figure}[h]
 	\centering
-		\includegraphics[width=0.5\textwidth]{Abbildungen/Schaltung_Kennlinie.jpg}
-	\label{fig:Schaltung_Kennlinie}
-	\caption{Schaltung zur Messung der Kennlinie der Halbleiterdiode.}
+	\input{Abbildungen/Solarzelle_Messung_tikz.tex}
+	\caption{Schaltung zur Messung der Strom-Spannungskennlinie einer Diode}
 \end{figure}
 
 \begin{enumerate}
@@ -227,12 +234,14 @@ Im Versuch wird ein in aus 19 Einzelelementen geschaltetes Solarmodul verwendet.
 		Verdunkeln Sie die auf dem Abschirmgehäuse aufgesteckte Solarzelle mit einem der optischen Filter und messen Sie die I(U)-Kennlinie im Bereich von 0\,V bis etwa 10\,V in Schritten von 1\,V.
 	%
  
-	\begin{minipage}{0.6\textwidth}
+	\begin{minipage}{0.4\textwidth}
 			\item \textbf{Die Kennlinie einer beleuchteten Solarzelle:}\\
 		Ersetzen Sie das Netzgerät durch den regelbaren Lastwiderstand und entfernen Sie den Filter. Messen Sie die Kennlinie erneut.
+		\vfill
 	\end{minipage}
-	\begin{minipage}{0.4\textwidth}
+	\begin{minipage}{0.55\textwidth}
 %		\includegraphics[width=1.00\textwidth]{Abbildungen/solarzelle.jpg}
+		\hfill
 		\input{Abbildungen/Solarzelle_beleuchtet_tikz.tex}
 		\label{fig:solarzelle }
 		\end{minipage}
