--- a/Versuch_1-2n/Anleitung-2.tex
+++ b/Versuch_1-2n/Anleitung-2.tex
@@ -21,7 +21,7 @@ Gehrtsen, Kapitel 1.4.2/3, 1.5.2 bis 1.5.9; Demtr"oder, Kapitel 2.1, 2.2, 4.2
 %------------------------------------------------
 %
 Beim inelastischen Stoß zweier Körper wird ein Teil der zur Verfügung stehenden Energie (die Summe der kinetischen Energien der beiden Körper vor dem Stoß) in Innere Energie der Körper umgewandelt. Das kann durch Erwärmung oder Verformung der Körper geschehen.\\
-Beispiele für solche inelastischen Stoßvorgänge sind die Formung chemischer Verbindungen aus mehreren Atomen oder Molekülen in Gasen oder Flüssigkeiten, das Auffalten von Gebirgen beim Zusammensto{\ss} tektonischer Platten oder auf kleineren Skalen der Blechschaden beim Zusammensto{\ss} von Fahrzeugen. Ein weiteres Beispiel ist die mit der Zeit abnehmende Sprunghöhe eines elastischen Balls, der vom Boden abprallt.\\
+Beispiele für solche inelastischen Stoßvorgänge sind die Formung chemischer Verbindungen aus mehreren Atomen oder Molekülen in Gasen oder Flüssigkeiten, das Auffalten von Gebirgen beim Zusammenstoß tektonischer Platten oder auf kleineren Skalen der Blechschaden beim Zusammenstoß von Fahrzeugen. Ein weiteres Beispiel ist die mit der Zeit abnehmende Sprunghöhe eines elastischen Balls, der vom Boden abprallt.\\
 Wir betrachten inelastische Stöße am Beispiel des Fadenpendels, anhand dessen sehr viele Eigenschaften von schwingenden Systemen verdeutlicht werden können. Einer der interessantesten Aspekte ist zum Beispiel die Unabhängigkeit der Schwingungsdauer des Pendels von der Masse des schwingenden Körpers, s. Pendeluhren oder Spiderman.\\
 
 Auch wenn die theoretische Einleitung etwas länger ist als bei anderen Versuchen, ist es doch sinnvoll sich mit den Grundlagen der Bewegung von Massepunkten (geworfene Bälle, Sie, Autos, etc.) zu beschäftigen. Diese Gesetzmäßigkeiten betreffen nicht nur jeden einzelnen von uns im Alltag, sondern bilden die Grundlagen für Effekte in allen Naturwissenschaften.
@@ -109,15 +109,15 @@ Diese Tatsache ist die Grundlage der Funktion von Pendeluhren, welche im 18. Jah
 	\label{fig:Fadenpendel}
 \end{figure}
 
-\subsection{St"o{\ss}e zwischen zwei K"orpern}
+\subsection{Stöße zwischen zwei Körpern}
 
-Ein Stoß ist eine sehr kurzzeitige Wechselwirkung zwischen zwei Körpern. Vor und nach dem Stoß bewegen sich beide, ohne einander zu beeinflussen. Obwohl die Gesamtenergie der beiden Sto{\ss}partner immer erhalten ist, kann h"aufig ein Teil der kinetischen Energie beim Sto{\ss} in andere Energieformen, z.B. in potenzielle Energie oder in W"armeenergie umgewandelt werden. Der Gesamtimpuls der beiden bleibt jedoch beim Sto{\ss} immer erhalten. Die Grundgleichungen f"ur Sto{\ss}prozesse zwischen zwei K"orpern lassen sich also schreiben als:
+Ein Stoß ist eine sehr kurzzeitige Wechselwirkung zwischen zwei Körpern. Vor und nach dem Stoß bewegen sich beide, ohne einander zu beeinflussen. Obwohl die Gesamtenergie der beiden Stoßpartner immer erhalten ist, kann häufig ein Teil der kinetischen Energie beim Stoß in andere Energieformen, z.B. in potenzielle Energie oder in Wärmeenergie umgewandelt werden. Der Gesamtimpuls der beiden bleibt jedoch beim Stoß immer erhalten. Die Grundgleichungen für Stoßprozesse zwischen zwei Körpern lassen sich also schreiben als:
 \begin{align}
 \vec{p}_1^{'} + \vec{p}_2^{'} &= \vec{p}_1 + \vec{p}_2 &\mathrm{Impulssatz}\\
 \frac{p_1^{'2}}{2m_1} + \frac{p_2^{'2}}{2m_2} &= \frac{p_1^{2}}{2m_1} + \frac{p_2^{2}}{2m_2} &\mathrm{Energiesatz}
 \end{align} 
 %
-Hierbei bezeichnen gestrichene Gr"o{\ss}en (z.B. $\vec{p}_1^{'}$) auf die Gr"o{\ss} nach dem Stoss. Beachten Sie, dass wir bei dieser klassischen Form des Energiesatzes die innere Energie nicht ber"ucksichtigt haben.\\
+Hierbei bezeichnen gestrichene Größen (z.B. $\vec{p}_1^{'}$) auf die Größe nach dem Stoß. Beachten Sie, dass wir bei dieser klassischen Form des Energiesatzes die innere Energie nicht berücksichtigt haben.\\
 %
 \begin{hint}
 	Es sei an die Definitionen von kinetischer Energie und Impuls erinnert:
@@ -139,6 +139,8 @@ Anhand der Energien der beiden Stoßpartner unterscheidet man drei Situationen:
 		Hierbei verbinden sich die Stoßpartner miteinander, sodass sie sich im Folgenden mit einer gemeinsamen Geschwindigkeit weiterbewegen. Beispiele sind die Untereinheiten von Ribosomen, die sich miteinander verbinden, sowie die beiden Metallkugeln im Versuch, welche nach dem Stoß durch die Knetmasse verbunden sind.
 	%
 \end{enumerate}
+
+\begin{tutorhint}
 %------------------------------------------------
 \section{Fragen zur Vorbereitung}
 %------------------------------------------------
@@ -159,6 +161,7 @@ Anhand der Energien der beiden Stoßpartner unterscheidet man drei Situationen:
  \item Wie lautet das Gravitationsgesetz?
 \end{enumerate} 
 
+\end{tutorhint}
 %------------------------------------------------
 \section{Durchführung} 
 %------------------------------------------------
