--- a/Versuch_1-2n/Versuch-1.tex
+++ b/Versuch_1-2n/Versuch-1.tex
@@ -23,7 +23,8 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{decorations.markings}
 \usetikzlibrary{decorations.pathreplacing}
-\usepackage[european resistors]{circuitikz}
+\input{../tikz/circuitikz-macros.tex}
+\usepackage[european resistors, americanvoltages, fulldiode]{circuitikz}
 \usepackage[ 
     top=2cm, 
     bottom=2cm, 
