Added custom meter.

--- a/tikz/circuitikz-macros.tex
+++ b/tikz/circuitikz-macros.tex
@@ -1,7 +1,7 @@
-\input{tikz/shape-dff.tex}
-\input{tikz/shape-halfadder.tex}
-\input{tikz/shape-fulladder.tex}
-\input{tikz/dipcase.tex}
+\include{tikz/shape-dff.tex}
+\include{tikz/shape-halfadder.tex}
+\include{tikz/shape-fulladder.tex}
+\include{tikz/dipcase.tex}
 
 \newcommand{\mymeter}[2] 
 {  % #1 = name , #2 = rotation angle
